--- a/_layouts/teamfrontpage.html
+++ b/_layouts/teamfrontpage.html
@@ -19,14 +19,7 @@ layout: default
 <!-- Display Rachel and Jon's bios -->
 
 {% for author in site.data.authors %}
-  {% if author[0] == "rachelbuurma" %}
-      {% include teammember.html %}
-      <br>
-  {% endif %}
-{% endfor %}
-
-{% for author in site.data.authors %}
-  {% if author[0] == "jonshaw" %}
+  {% if author[0] == "kangsoonju" %}
       {% include teammember.html %}
       <br>
   {% endif %}
