--- a/_layouts/teamfrontpage.html
+++ b/_layouts/teamfrontpage.html
@@ -23,5 +23,5 @@ layout: default
   {% if author[0] != "kangsoonju" %}
       {% include teammember.html %}
       <br>
-  {% endfor %}
+  {% endif %}
 {% endfor %}
