--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,7 +12,7 @@
     {% endif %}
     {% if site.author.social %}
     custom: {
-      families: ['icomoon'],
+      families: ['icomoon', 'NanumBarunGothic-YetHangul'],
       urls: ['{{ site.baseurl }}/public/css/icons.css']
     },
     {% endif %}
