--- a/public/css/non-essentials.scss
+++ b/public/css/non-essentials.scss
@@ -34,3 +34,8 @@
 @import "hydejack/katex";
 
 @import "jekyll-github";
+
+@font-face {
+	  font-family: "NanumBarunGothic-YetHangul";
+		  src: url( '../fonts/NanumBarunGothic-YetHangul.ttf') format( 'truetype');
+}
