--- a/public/css/non-essentials.scss
+++ b/public/css/non-essentials.scss
@@ -36,6 +36,6 @@
 @import "jekyll-github";
 
 @font-face {
-	  font-family: "NanumBarunGothic-YetHangul";
-		  src: url( '../fonts/NanumBarunGothic-YetHangul.ttf') format( 'truetype');
+	  font-family: "NanumMyeongjo-YetHangul";
+		  src: url( '../fonts/NanumMyeongjo-YetHangul.ttf') format( 'truetype');
 }
