--- a/public/css/non-essentials.scss
+++ b/public/css/non-essentials.scss
@@ -39,3 +39,8 @@
 	  font-family: "NanumMyeongjo-YetHangul";
 		  src: url( '../fonts/NanumMyeongjo-YetHangul.ttf') format( 'truetype');
 }
+
+@font-face {
+	  font-family: "NanumBarunGothic";
+		  src: url( '../fonts/NanumBarunGothic.ttf') format( 'truetype');
+}
