--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   </li> -->
 
   <li>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/people/">People</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/people/">길라잡이</a>
   </li>
 
 <!--
@@ -27,7 +27,7 @@
   </li>
 -->
   <li>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">Blog</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">끄적끄적</a>
   </li>
 <!--
   <li>
