--- a/public/css/non-essentials.scss
+++ b/public/css/non-essentials.scss
@@ -37,8 +37,8 @@
 
 @font-face{ 
 	font-family: 'NanumMyeongjo-YetHangul';
-	src: url('NanumMyeongjo-YetHangul.eot');
-	src: url('NanumMyeongjo-YetHangul.eot?#iefix') format('embedded-opentype'),
-	     url('NanumMyeongjo-YetHangul.woff') format('woff'),
-	     url('NanumMyeongjo-YetHangul.ttf') format('truetype');
+	src: url('../fonts/NanumMyeongjo-YetHangul.eot');
+	src: url('../fonts/NanumMyeongjo-YetHangul.eot?#iefix') format('embedded-opentype'),
+	     url('../fonts/NanumMyeongjo-YetHangul.woff') format('woff'),
+	     url('../fonts/NanumMyeongjo-YetHangul.ttf') format('truetype');
 }
