--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   </li> -->
 
   <li>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/people/">들락날락</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/people/">우리는</a>
   </li>
 
 <!--
@@ -27,7 +27,7 @@
   </li>
 -->
   <li>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">도란도란</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">전통주이야기</a>
   </li>
 <!--
   <li>
