--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
   </li>
 -->
   <li>
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">전통주이야기</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/tag/blog/">전통주빚기</a>
   </li>
 <!--
   <li>
